# conflag

./: pyproject.toml
src/: test.py
src/conflag/: run.py
tests/: config.json  test_conflag.py  test_usage.py
